<resources>
    <string name="app_name">2026_03_16</string>
    <string name="header">Wizyta u weterynarza</string>
    <string name="hint">Imie i nazwisko wlasciciela</string>
    <string name="species">Gatunek</string>
    <string name="dog">Pies</string>
    <string name="cat">Kot</string>
    <string name="guineaPig">Swinka morska</string>
    <string name="age">Ile ma lat? 0</string>
    <string name="goal">Cel wizyty</string>
    <string name="time">16:00</string>\
    <string name="submit">OK</string>
</resources>