<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background">
    
    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/header"
        android:background="@color/header"
        android:textSize="35sp"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/owner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/species"
        android:text="@string/species"/>

    <ListView
        android:id="@+id/speciesList"
        android:layout_width="match_parent"
        android:layout_height="100dp"/>

    <LinearLayout
        android:id="@+id/subLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"/>

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="20"
            android:min="0"/>

    </LinearLayout>

    <EditText
        android:id="@+id/visitGoal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/goal"/>

    <EditText
        android:id="@+id/visitTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:text="@string/time"/>
    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"/>

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    
</LinearLayout>